fix layout overflow on smaller devices

--- a/src/styles/chores.css
+++ b/src/styles/chores.css
@@ -1,10 +1,8 @@
 #chores {
   padding-top: 10rem;
   background-color: #99ef64;
-  --padding: 5vw;
-  padding-left: var(--padding);
-  padding-right: var(--padding);
-  height: 100%;
+  --padding: 10vw;
+  padding: 10rem var(--padding);
 }
 
 .chores-heading {
@@ -24,9 +22,25 @@
 
 .chores-grid {
   display: grid;
-  gap: 1.6rem;
-  padding: 0 1.6rem;
-  grid-template-areas: unset;
+  grid-template-areas:
+    "item1 item1"
+    "item2 item3"
+    "item2 item4"
+    "item5 item6";
+  gap: 25px;
+}
+
+@media (max-width: 1010px) {
+  .chores-grid {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .chores-card {
+    max-height: 500px;
+  }
 }
 
 .grid-heading {
@@ -62,14 +76,12 @@ h1 {
 }
 
 .chores-card {
-  border: 1px solid white;
-  border-radius: 5px;
-  overflow: hidden;
   height: auto;
   display: flex;
   justify-content: center;
-  background-color: black;
-  min-width: 300px;
+  min-height: 200px;
+  width: 100%;
+  height: 100%;
 }
 
 .chores-card:hover {
@@ -77,16 +89,16 @@ h1 {
 }
 
 .video-container {
-  width: 100%;
-  height: 100%;
   transition: 0.3s ease;
   position: relative;
+  border: 1px solid white;
+  border-radius: 5px;
+  overflow: hidden;
 }
 
 .budget {
   grid-area: item1;
   max-height: 600px;
-  width: auto;
 }
 
 .iron {
@@ -117,24 +129,4 @@ h1 {
   margin-top: 1.25rem;
   text-transform: uppercase;
   font-family: ZentryScreamer, Helvetica Neue, sans-serif;
-}
-
-.card-text > p {
-  width: 22rem;
-}
-
-@media (min-width: 1010px) {
-  .chores-grid {
-    display: grid;
-    grid-template-areas:
-      "item1 item1"
-      "item2 item3"
-      "item2 item4"
-      "item5 item6";
-    grid-template-columns: repeat(2, 1fr);
-    padding-top: 5rem;
-    padding-bottom: 5rem;
-    margin: 0 5vw;
-    gap: 25px;
-  }
 }
